# llama.cpp

./: .gitignore
common/: speculative.cpp  speculative.h
examples/llama.android/: gradle.properties
examples/llama.android/app/: build.gradle.kts
examples/llama.android/app/src/main/: AndroidManifest.xml
examples/llama.android/app/src/main/java/com/example/llama/: Downloadable.kt  MainActivity.kt  MainViewModel.kt
examples/llama.android/app/src/main/java/com/example/llama/api/: ApiService.kt  DeepseekApiService.kt  HeteroSpecService.kt  QwenApiService.kt
examples/llama.android/llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
examples/llama.android/llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
